minor spacing fix

--- a/css/screen2.css
+++ b/css/screen2.css
@@ -683,7 +683,7 @@ margin-bottom: 5.875rem;
 	justify-content: center;
 	margin-top: 0;
 	padding-top: 0;
-	padding-bottom: 8.625rem;
+	padding-bottom: 4.625rem;
 	background-color: rgba(255, 211, 190, 0.5);
 	padding-top: 1.5rem;
 
