--- a/css/screen3.css
+++ b/css/screen3.css
@@ -777,7 +777,7 @@ font-weight: 400;
 	justify-content: center;
 	margin-top: 0;
 	padding-top: 0;
-	padding-bottom: 8.625rem;
+	padding-bottom: 4.625rem;
 	background-color: rgba(255, 211, 190, 0.5);
 	padding-top: 0;
 
